# whoisserver-legacy

./: .gitignore  .perltidyrc  INSTALL  Install.PL  LICENCE  Makefile.am  NEWS  README  README.MODULES  README.freebsd  README.linux  README.solaris  RELEASE-NOTES  UPDATE-DB-3.2.0  UPDATE-DB-3.3.0  WISHLIST  autogen.sh  build.sh  configure.ac  mkinstalldirs  rpsl.variant  sample-build.sh
src/: Makefile.am  makedefsall.in
src/SQL/: README  admin.create.sql  admin.data.sql  admin.truncate.sql  aux.index.2  create.RIPADMIN.sql.in  create.RIPADMIN.sql.patch.in  create.RIPADMIN_pub_nrtm.sql.patch  create.RIPADMIN_v6.sql.patch  create.first-stage  create.first-stage.in  create.irt-tables.sql.patch  create.last-history-indexes.sql.patch.in  create.second-stage.in  create.tables.sql  create.tables.sql.in  create.tables.sql.patch  create.third-stage.in  create_asn32.patch  create_asn32.patch.in  fingerpr_x509.sql.patch.in  leaf.index.2.in  main.create.sql  main.data.sql  main.dummy.sql  main.index.1.in  main.truncate.sql  resetdata  resetdata.RIPADMIN.sql  resetdata.tables.sql
src/SQL/patch/: v3.10.3_pingable.sql  v3.11_rdns_dash.sql  v3.14_update_lock.sql
src/dbupdate_src/: dbupdate.c
src/defs/: AttributeDef.java  AttributeSyntax.java  ClassDef.java  Defs.java  HOWTO  Makefile.am  Makefile.in  Makefile.syntax  Query.java  README  RPSLSyntax.java  attribute_tab.h  attributes.dtd  attributes.xml  class_tab.h  classes.dtd  classes.xml  makedefsall.in  syntax.dtd  syntax.xml  syntax_tab.h
src/defs/xalan/: README
src/getvar_src/: getvar.c
src/history/: aconf.c  aconf.h  archive.c  backup.c  cleanup.c  dbsupport.c  dbsupport.h  miniconf.c  miniconf.h  recreate.c  surf.c
src/include/: DF_attribute_aliases.def  DF_attribute_aliases_map.def  DF_attribute_codes.def  DF_attribute_enum.def  DF_attribute_inv_attr_mask.def  DF_attribute_names.def  DF_class_aliases.def  DF_class_aliases_map.def  DF_class_codes.def  DF_class_dbase_code_map.def  DF_class_enum.def  DF_class_mask.def  DF_class_names.def  DF_class_templates.def  DF_class_templates_v.def  DF_radix_load.def  Diagrams.def  NAME  QI_queries.def  UD_comrol.def  UD_queries.def  comparisons.h  globaldefs.h  rip.h  stubs.h
src/loader_src/: loader.c
src/modules/aa/: aa.c  aa.h
src/modules/ac/: ac_persistence.c  access_control.c  access_control.h
src/modules/au/: TODO  au.h  au_irt.c  au_main.c  au_organisation.c  au_plugins.c  au_plugins.h  au_ripe.c  au_rpsl.c  au_rpsl.h  au_util.c  au_util.h  auth_spec.txt  crypt-md5.c  crypt-whois.h  misc.c  test_au_dbupdate.c
src/modules/ca/: README  RELEASE_NOTES.v3  RELEASE_NOTES.v3.1  ca_adminAttribs.h  ca_configFns.c  ca_configFns.h  ca_defs.h  ca_dictionary.h  ca_initFn.c  ca_libs.h  ca_macros.h  ca_sanityCheck.c  ca_sourceLoader.c  ca_srcAttribs.h  ca_values.c  configFileDoc.txt  dictGen.m4
src/modules/co/: constants.c  constants.h
src/modules/cr/: cr.c  cr.h
src/modules/df/: defs.c  defs.h
src/modules/ep/: TODO  ep.c  ep.h  ep_internal.h  ep_mail_driver.c  ep_text_driver.c  mm.c  mm.h  mm_hook.c  mm_internal.h  x509.c
src/modules/ip/: inet6def.h  inet_ntop.c  inet_pton.c  ip.c  iproutines.h
src/modules/km/: BUGS  km.c  km.h  km_X509.c  km_internal.h  km_pgp.c  lulu.c
src/modules/lg/: lg.c  lg.h  lg_utils.c
src/modules/lu/: lu.c  lu.h  lu_api.txt  lu_whois.c  lu_whois.h  test_lu_whois.c
src/modules/ma/: bitmask.c  bitmask.h
src/modules/nh/: nh.c  nh.h
src/modules/ns/: ns_auth.c  ns_perl.c  ns_perl.h  ns_rir.c  ns_rir.h  ns_util.c  ns_util.h  ns_xml.c  ns_xml.h
src/modules/nt/: TODO  notification.c  notification.h
src/modules/pc/: pc_commands.c  pc_commands.h  protocol_config.c  protocol_config.h
src/modules/pg/: pg.c  pg.h
src/modules/pl/: protocol_lookup.c  protocol_lookup.h
src/modules/pm/: pm_serials.c  protocol_mirror.c  protocol_mirror.h
src/modules/pr/: properties.c  properties.h
src/modules/pw/: protocol_whois.c  protocol_whois.h
src/modules/qc/: mg_getopt.c  mg_getopt.h  query_command.c  query_command.h
src/modules/qi/: query_instructions.c  query_instructions.h
src/modules/rp/: rp.h  rp_convert.c  rp_interact.c  rp_load.c  rp_search.c  rp_tree.c  rp_update.c
src/modules/rpsl/: aggr_bndry.l  aggr_bndry.lex.c  aggr_bndry.tab.c  aggr_bndry.tab.h  aggr_bndry.y  aggr_mtd.l  aggr_mtd.lex.c  aggr_mtd.tab.c  aggr_mtd.tab.h  aggr_mtd.y  attribute.c  attribute.h  class.c  class.h  components.l  components.lex.c  components.tab.c  components.tab.h  components.y  components_r6.l  components_r6.lex.c  components_r6.tab.c  components_r6.tab.h  components_r6.y  default.l  default.lex.c  default.tab.c  default.tab.h  default.y  export.l  export.lex.c  export.tab.c  export.tab.h  export.y  filter.l  filter.lex.c  filter.tab.c  filter.tab.h  filter.y  ifaddr.l  (+126 more)
src/modules/rt/: rt.h  rt_core.c  rt_dbupdate.c  rt_dbupdate.h  rt_internal.h
src/modules/rx/: rx_node.c  rx_print.c  rx_search.c  rx_tree.c  rxroutines.h
src/modules/sk/: cd_socket.c  cd_watchdog.c  sk.h  sk_socket.c
src/modules/sq/: mysql_driver.c  mysql_driver.h
src/modules/sv/: server.c  server.h
src/modules/ta/: ta.c  ta.h
src/modules/th/: thread.c  thread.h
src/modules/ud/: merge.results  ud.h  ud_comrol.c  ud_core.c  ud_int.h  ud_main.c  ud_misc.c  ud_process_stream.c  ud_recover.c  ud_rx.c  ud_serial.c  ud_tr.h
src/modules/up/: TODO  dbupdate.h  (+6 more)
src/mr_src/: mr.c
src/opl/: README
src/opl-perl/: Changes  MANIFEST  Makefile.PL  Makefile.PL.in  README  RPSL.pm  RPSL.xs  typemap
src/ripupdate_src/: ripupdate.c
src/text_export_src/: text_export.c
src/utils/: README.ip6arpa  enableupdates.in  extract-keycerts-from-text-dump.pl.in  extract-keycerts-sql.pl.in  ftp_export.sh.in  ip6arpa-fix.pl.in  load_all.sh.in  make_db.in  make_mysql_user.in  md5_pw.c  noperson.sed  radb_filter.pl.in  remadmin.pl.in  replay_updlog.pl  restore_dbase.sh.in  resync-gnupg-ring-from-sql.sh.in  resync-gnupg-ring-from-text-dump.sh.in  ripe.whois  ripe2rpsl.in  runqueue.in  split_updlog.pl  whoisd.server.in  whoisd_start.in  wrapper.in  wrapper.sh
src/whois-server_src/: whois-server.c
(+3370 files in other folders)
